# mediafetch

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: binaries.rs  downloader.rs  history.rs  main.rs  metadata.rs  notify.rs  settings.rs  types.rs
src/components/: DisclaimerDialog.tsx  PresetControls.tsx  PresetDialog.tsx  QueueItem.tsx  Sidebar.tsx  SpeedGraph.tsx  Toaster.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  progress.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/lib/: api.ts  i18n.tsx  presets.ts  report.ts  store.ts  types.ts  utils.ts
src/pages/: BinariesPage.tsx  DownloadsPage.tsx  HistoryPage.tsx  QueuePage.tsx  SettingsPage.tsx  StatsPage.tsx  WorkspacePage.tsx
